@@ -4,6 +4,10 @@
 	in memory during input.  Otherwise we leak memory after every plot of
 	binary matrix data.
 
+	* src/color.h src/gadgets.c src/gadgets.h src/misc.c src/term.c
+	src/term_api.h:  Repair some lp_style_type definitions and initializers
+	that were incorrect or incomplete.
+
 2010-09-08  Peter Juhasz  <juhaszp@users.sourceforge.net>
 
 	* src/plot2d.c (store_label eval_plots): Extend variable color support
